simplified styling & fixed spacing issue

--- a/client/src/components/Navigation.css
+++ b/client/src/components/Navigation.css
@@ -3,8 +3,8 @@ header {
 }
 
 h1 {
-  font-family: Playfair Display;
+  font-family: Playfair Display, serif;
   font-style: normal;
-  font-weight: bold;
-  font-size: 28px;
+  font-size: 30px;
+  color: #F8F6EA;
 }
